--- a/imbiss-website/src/styles/main.css
+++ b/imbiss-website/src/styles/main.css
@@ -130,12 +130,13 @@ nav li.active, nav li:hover {
 }
 
 main {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 2rem auto;
     padding: 1rem;
     background: #fff;
     border-radius: 1rem;
     box-shadow: 0 2px 16px rgba(0,0,0,0.07);
+    width: 95%;
 }
 
 #dishes {
